--- a/blueprints/FLEE_blueprint.yaml
+++ b/blueprints/FLEE_blueprint.yaml
@@ -32,7 +32,7 @@ imports:
     - http://raw.githubusercontent.com/ari-apc-lab/croupier/master/resources/types/cfy_types.yaml
     # HPC pluging
     - http://raw.githubusercontent.com/ari-apc-lab/croupier/master/plugin.yaml
-    - https://raw.githubusercontent.com/arabnejad/HiDALGO_flee_blueprint/master/flee_blueprint_inputs_definition.yaml
+    - https://raw.githubusercontent.com/arabnejad/HiDALGO_flee_blueprint/master/blueprints/flee_blueprint_inputs_definition.yaml
 
 node_templates:
     hpc_interface:
@@ -63,7 +63,7 @@ node_templates:
                 partition: { get_input: partition_name }
                 max_time: "02:00:00"
             deployment:
-                bootstrap: 'pre_configuring.sh'
+                bootstrap: 'scripts/pre_configuring.sh'
                 inputs:
                     - { get_input: flee_github_repo }
                     - { get_input: branch }
