Adds jobwalltime input arg to blueprint

--- a/FLEE-blueprint/flee_blueprint_inputs_definition.yaml
+++ b/FLEE-blueprint/flee_blueprint_inputs_definition.yaml
@@ -16,6 +16,9 @@ inputs:
       default: {}
     partition_name:
       default: interactive
+      
+    jobwalltime:
+      default: "00:59:00"
 
     job_prefix:
       default: FLEE_
