--- a/FLEE-blueprint/FLEE_blueprint.yaml
+++ b/FLEE-blueprint/FLEE_blueprint.yaml
@@ -54,8 +54,9 @@ node_templates:
             job_options:
                 type: 'SBATCH'
                 pre:
-                    - 'module load python/3.7.3'
-                    - 'module load openmpi/1.8.1-1_gcc482'
+                    # - 'module load python/3.7.3'
+                    # - 'module load openmpi/1.8.1-1_gcc482'
+                    - 'module load python/3.7.10_gcc930'
                 memory: "6G"
                 commands: ["bash scripts/run_job.sh"]
                 nodes: { get_input: nnodes }
