Update the CKAN instance address

--- a/FLEE-blueprint/flee_blueprint_inputs_definition.yaml
+++ b/FLEE-blueprint/flee_blueprint_inputs_definition.yaml
@@ -110,7 +110,7 @@ inputs:
         INPUT:
             name: CKAN data repository
             description: "CKAN data repository"
-            default: "https://hidalgo1.man.poznan.pl"
+            default: "https://ckan.hidalgo-project.eu"
             type: string
             order: 9
 
