--- a/sample-user-blueprint-inputs.yaml
+++ b/sample-user-blueprint-inputs.yaml
@@ -72,9 +72,9 @@ inputconfigtags: "inputs,flee,config_files"
 # config_name: "multiscale"
 mscale: "False"
 # variable settings for multi-scale simulation
-num_workers: "1"
-cores_per_worker: "4"
+mscale_num_workers: "1"
+mscale_cores_per_worker: "4"
 mscale_input_data_dir: "ssudan-mscale-test" # possible inputs : [ssudan-mscale, ssudan-mscale-test]
-log_exchange_data: "True" # [True, False]
-coupling_type: "file" # [file, muscle3]
-weather_coupling: "False" # [True, False]
+mscale_log_exchange_data: "True" # [True, False]
+mscale_coupling_type: "file" # [file, muscle3]
+mscale_weather_coupling: "False" # [True, False]
